--- a/package.json
+++ b/package.json
@@ -11,27 +11,58 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "^6.0.3",
+    "@angular/cdk": "6.0.1",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
+    "@angular/flex-layout": "6.0.0-beta.15",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "6.0.1",
+    "@angular/material-moment-adapter": "6.0.1",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ngrx/effects": "6.0.0-beta.1",
+    "@ngrx/router-store": "6.0.0-beta.1",
+    "@ngrx/store": "6.0.0-beta.1",
+    "@ngrx/store-devtools": "6.0.0-beta.1",
+    "@ngx-translate/core": "10.0.1",
+    "@swimlane/ngx-charts": "8.0.0",
+    "@swimlane/ngx-datatable": "12.0.0",
+    "@swimlane/ngx-dnd": "4.0.0",
+    "@types/prismjs": "1.9.0",
+    "angular-calendar": "0.24.0",
+    "angular-in-memory-web-api": "0.6.0",
+    "chart.js": "2.7.2",
+    "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
+    "d3": "5.2.0",
+    "hammerjs": "2.0.8",
+    "lodash": "4.17.10",
+    "moment": "2.22.1",
+    "ng2-charts": "1.6.0",
+    "ngrx-store-freeze": "0.2.2",
+    "ngx-color-picker": "6.0.0",
+    "ngx-cookie-service": "1.0.10",
+    "perfect-scrollbar": "1.3.0",
+    "prismjs": "1.14.0",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "6.1.0",
+    "web-animations-js": "2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
-    "@angular/language-service": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/language-service": "6.0.0",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angularclass/hmr": "2.1.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "4.14.108",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
@@ -43,6 +74,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2",
+    "webpack-bundle-analyzer": "2.11.1"
   }
 }
