--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "prismjs": "1.14.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "6.1.0",
+    "underscore": "^1.9.1",
     "web-animations-js": "2.3.1",
     "zone.js": "^0.8.26"
   },
