--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@swimlane/ngx-dnd": "4.0.0",
     "@types/prismjs": "1.9.0",
     "angular-calendar": "0.24.0",
+    "angular-file": "^0.5.4",
+    "angular-froala-wysiwyg": "^2.8.4-1",
     "angular-in-memory-web-api": "0.6.0",
     "chart.js": "2.7.2",
     "classlist.js": "1.1.20150312",
@@ -53,9 +55,7 @@
     "rxjs-compat": "6.1.0",
     "underscore": "^1.9.1",
     "web-animations-js": "2.3.1",
-    "zone.js": "^0.8.26",
-    "angular-file": "^0.5.4",
-    "angular-froala-wysiwyg": "^2.8.4-1"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "~6.0.8",
