--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ngrx-store-freeze": "0.2.2",
     "ngx-color-picker": "6.0.0",
     "ngx-cookie-service": "1.0.10",
+    "ngx-mat-select-search": "^1.3.1",
     "perfect-scrollbar": "1.3.0",
     "prismjs": "1.14.0",
     "rxjs": "^6.0.0",
