--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@swimlane/ngx-datatable": "12.0.0",
     "@swimlane/ngx-dnd": "4.0.0",
     "@types/prismjs": "1.9.0",
+    "angular-autofocus-fix": "^0.1.0",
     "angular-calendar": "0.24.0",
     "angular-file": "^0.5.4",
     "angular-froala-wysiwyg": "^2.8.4-1",
