--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "core-js": "^2.5.4",
     "d3": "5.2.0",
     "hammerjs": "2.0.8",
+    "html2canvas": "^1.0.0-alpha.12",
     "lodash": "4.17.10",
     "moment": "2.22.1",
     "ng2-charts": "1.6.0",
