--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chart.js": "2.7.2",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "d3": "5.2.0",
     "hammerjs": "2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
