--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "angular-file": "^0.5.4",
     "angular-froala-wysiwyg": "^2.8.4-1",
     "angular-in-memory-web-api": "0.6.0",
-    "chart.js": "2.7.2",
+    "angular-progress-bar": "^1.0.9",
+    "chart.js": "^2.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
