--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:prod": "ng build --prod",
+    "build:qa": "ng build --configuration=qa",
+    "build:monolith": "ng build --configuration=monolith",
+    "build:training": "ng build --configuration=training",
+    "build:dev": "ng build"
   },
   "private": true,
   "dependencies": {
@@ -62,8 +66,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
+    "@angular-devkit/build-angular": "^0.8.9",
+    "@angular/cli": "^6.1.0-rc.0",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "6.0.0",
     "@angularclass/hmr": "2.1.3",
