--- a/angular.json
+++ b/angular.json
@@ -158,6 +158,34 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "microservices": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.microservices.ts"
+                },
+                {
+                  "replace": "src/public/index.html",
+                  "with": "src/public/index.prod.html"
+                }
+              ],
+              "styles": [
+                "src/assets/fonts/proxima-fontface/stylesheet.css",
+                "src/scss/styles/styles.prod.scss",
+                "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
+                "node_modules/froala-editor/css/froala_style.min.css",
+                "node_modules/font-awesome/css/font-awesome.css"
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true
             }
           }
         },
@@ -178,6 +206,9 @@
             },
             "training": {
               "browserTarget": "ayo-principal:build:training"
+            },
+            "microservices": {
+              "browserTarget": "ayo-principal:build:microservices"
             }
           }
         },
@@ -240,6 +271,9 @@
             },
             "training": {
               "devServerTarget": "ayo-principal:serve:training"
+            },
+            "microservices": {
+              "devServerTarget": "ayo-principal:serve:microservices"
             }
           }
         },
