--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,18 @@
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.qa.ts"
+                },
+                {
+                  "replace": "src/public/index.html",
+                  "with": "src/public/index.prod.html"
                 }
+              ],
+              "styles": [
+                "src/assets/fonts/proxima-fontface/stylesheet.css",
+                "src/scss/styles/styles.prod.scss",
+                "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
+                "node_modules/froala-editor/css/froala_style.min.css",
+                "node_modules/font-awesome/css/font-awesome.css"
               ],
               "optimization": true,
               "outputHashing": "all",
