--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "ngx-mat-select-search": "^1.3.1",
     "perfect-scrollbar": "1.3.0",
     "prismjs": "1.14.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.0.0",
     "rxjs-compat": "6.1.0",
     "underscore": "^1.9.1",
     "web-animations-js": "2.3.1",
