--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,8 @@
               "src/scss/styles/styles.scss",
               "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
               "node_modules/froala-editor/css/froala_style.min.css",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/ngx-lightbox/lightbox.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
@@ -74,7 +75,8 @@
                 "src/scss/styles/styles.prod.scss",
                 "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
                 "node_modules/froala-editor/css/froala_style.min.css",
-                "node_modules/font-awesome/css/font-awesome.css"
+                "node_modules/font-awesome/css/font-awesome.css",
+                "node_modules/ngx-lightbox/lightbox.css"
               ],
               "optimization": true,
               "outputHashing": "all",
@@ -102,7 +104,8 @@
                 "src/scss/styles/styles.prod.scss",
                 "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
                 "node_modules/froala-editor/css/froala_style.min.css",
-                "node_modules/font-awesome/css/font-awesome.css"
+                "node_modules/font-awesome/css/font-awesome.css",
+                "node_modules/ngx-lightbox/lightbox.css"
               ],
               "optimization": true,
               "outputHashing": "all",
@@ -130,7 +133,8 @@
                 "src/scss/styles/styles.prod.scss",
                 "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
                 "node_modules/froala-editor/css/froala_style.min.css",
-                "node_modules/font-awesome/css/font-awesome.css"
+                "node_modules/font-awesome/css/font-awesome.css",
+                "node_modules/ngx-lightbox/lightbox.css"
               ],
               "optimization": true,
               "outputHashing": "all",
@@ -158,7 +162,8 @@
                 "src/scss/styles/styles.training.scss",
                 "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
                 "node_modules/froala-editor/css/froala_style.min.css",
-                "node_modules/font-awesome/css/font-awesome.css"
+                "node_modules/font-awesome/css/font-awesome.css",
+                "node_modules/ngx-lightbox/lightbox.css"
               ],
               "optimization": true,
               "outputHashing": "all",
@@ -186,7 +191,8 @@
                 "src/scss/styles/styles.prod.scss",
                 "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
                 "node_modules/froala-editor/css/froala_style.min.css",
-                "node_modules/font-awesome/css/font-awesome.css"
+                "node_modules/font-awesome/css/font-awesome.css",
+                "node_modules/ngx-lightbox/lightbox.css"
               ],
               "optimization": true,
               "outputHashing": "all",
