--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "hammerjs": "2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
     "lodash": "4.17.10",
+    "luxon": "^1.12.1",
     "moment": "2.22.1",
     "ng2-charts": "1.6.0",
     "ngrx-store-freeze": "0.2.2",
@@ -61,6 +62,7 @@
     "ngx-daterangepicker-material": "^1.2.7",
     "ngx-lightbox": "^1.2.0",
     "ngx-mat-select-search": "^1.3.1",
+    "ngx-material-timepicker": "^3.0.3",
     "perfect-scrollbar": "1.3.0",
     "prismjs": "1.14.0",
     "rxjs": "6.0.0",
