--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ngx-lightbox": "^1.2.0",
     "ngx-mat-select-search": "^1.3.1",
     "ngx-material-timepicker": "^3.0.3",
+    "ngx-progressbar": "^2.1.1",
     "perfect-scrollbar": "1.3.0",
     "prismjs": "1.14.0",
     "rxjs": "6.0.0",
