--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:monolith": "ng build --configuration=monolith",
     "build:training": "ng build --configuration=training",
     "build:microservices": "ng build --configuration=microservices",
-    "build:dev": "ng build"
+    "build:dev": "ng build --aot=true --buildOptimizer=true --optimization=true --outputHashing=all --sourceMap=false --extractCss=true --namedChunks=false --extractLicenses=true --vendorChunk=false"
   },
   "private": true,
   "dependencies": {
