--- a/angular.json
+++ b/angular.json
@@ -117,24 +117,12 @@
               "vendorChunk": false,
               "buildOptimizer": true
             },
-            "monolith": {
+            "dev-hms": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.monolith.ts"
-                },
-                {
-                  "replace": "src/public/index.html",
-                  "with": "src/public/index.prod.html"
+                  "with": "src/environments/environment.dev-hms.ts"
                 }
-              ],
-              "styles": [
-                "src/assets/fonts/proxima-fontface/stylesheet.css",
-                "src/scss/styles/styles.prod.scss",
-                "node_modules/froala-editor/css/froala_editor.pkgd.min.css",
-                "node_modules/froala-editor/css/froala_style.min.css",
-                "node_modules/font-awesome/css/font-awesome.css",
-                "node_modules/ngx-lightbox/lightbox.css"
               ],
               "optimization": true,
               "outputHashing": "all",
@@ -218,8 +206,8 @@
             "qa": {
               "browserTarget": "ayo-principal:build:qa"
             },
-            "monolith": {
-              "browserTarget": "ayo-principal:build:monolith"
+            "dev-hms": {
+              "browserTarget": "ayo-principal:build:dev-hms"
             },
             "training": {
               "browserTarget": "ayo-principal:build:training"
@@ -283,8 +271,8 @@
             "qa": {
               "devServerTarget": "ayo-principal:serve:qa"
             },
-            "monolith": {
-              "devServerTarget": "ayo-principal:serve:monolith"
+            "dev-hms": {
+              "devServerTarget": "ayo-principal:serve:dev-hms"
             },
             "training": {
               "devServerTarget": "ayo-principal:serve:training"
