--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@swimlane/ngx-datatable": "12.0.0",
     "@swimlane/ngx-dnd": "4.0.0",
     "@types/prismjs": "1.9.0",
+    "@types/sjcl": "^1.0.28",
     "angular-autofocus-fix": "^0.1.0",
     "angular-calendar": "0.24.0",
     "angular-file": "^0.5.4",
@@ -49,6 +50,7 @@
     "chart.js": "^2.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.5.4",
+    "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "d3": "5.2.0",
     "hammerjs": "2.0.8",
@@ -69,6 +71,7 @@
     "prismjs": "1.14.0",
     "rxjs": "6.0.0",
     "rxjs-compat": "6.1.0",
+    "sjcl": "^1.0.8",
     "underscore": "^1.9.1",
     "web-animations-js": "2.3.1",
     "zone.js": "^0.8.26"
