--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "ngx-cookie-service": "1.0.10",
     "ngx-daterangepicker-material": "^1.2.7",
     "ngx-lightbox": "^1.2.0",
+    "ngx-mask": "^8.1.7",
     "ngx-mat-select-search": "^1.3.1",
     "ngx-material-timepicker": "^3.0.3",
     "ngx-progressbar": "^2.1.1",
