--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "d3": "5.2.0",
+    "dexie": "^2.0.4",
     "hammerjs": "2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
     "lodash": "4.17.10",
