--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:dev-hms": "ng build --configuration=dev-hms",
     "build:training": "ng build --configuration=training",
     "build:microservices": "ng build --configuration=microservices",
-    "build:dev": "ng build --aot=true --buildOptimizer=true --optimization=true --outputHashing=all --sourceMap=false --extractCss=true --namedChunks=false --extractLicenses=true --vendorChunk=false"
+    "build:dev": "ng build --aot=true --buildOptimizer=true --optimization=true --outputHashing=all --sourceMap=false --extractCss=true --namedChunks=false --extractLicenses=true --vendorChunk=false",
+    "build:qa:upHeap": "node --max_old_space_size=8192 ./node_modules/@angular/cli/bin/ng build --configuration=qa"
   },
   "private": true,
   "dependencies": {
