--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "rxjs-compat": "6.1.0",
     "sjcl": "^1.0.8",
     "underscore": "^1.9.1",
-    "web-animations-js": "2.3.1",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
