--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "crypto-js": "^3.1.9-1",
     "d3": "5.2.0",
     "dexie": "^2.0.4",
-    "firebase": "^5.8.4",
+    "firebase": "^6.3.1",
     "hammerjs": "2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
     "js-sha256": "^0.9.0",
@@ -74,6 +74,7 @@
     "ngx-mat-select-search": "^1.3.1",
     "ngx-material-timepicker": "^3.0.3",
     "ngx-progressbar": "^2.1.1",
+    "node-sass": "^4.12.0",
     "perfect-scrollbar": "1.3.0",
     "prismjs": "1.14.0",
     "qiscus-sdk-core": "^2.9.5",
@@ -82,7 +83,7 @@
     "rxjs-compat": "6.1.0",
     "sjcl": "^1.0.8",
     "underscore": "^1.9.1",
-    "web-animations-js": "^2.3.1",
+    "web-animations-js": "2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
