--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "ngx-mat-select-search": "^1.3.1",
     "ngx-material-timepicker": "^3.0.3",
     "ngx-progressbar": "^2.1.1",
-    "node-sass": "^4.12.0",
     "perfect-scrollbar": "1.3.0",
     "prismjs": "1.14.0",
     "qiscus-sdk-core": "^2.9.5",
@@ -83,7 +82,7 @@
     "rxjs-compat": "6.1.0",
     "sjcl": "^1.0.8",
     "underscore": "^1.9.1",
-    "web-animations-js": "2.3.1",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
