--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@swimlane/ngx-charts": "8.0.0",
     "@swimlane/ngx-datatable": "12.0.0",
     "@swimlane/ngx-dnd": "4.0.0",
+    "@swimlane/ngx-graph": "^6.2.0",
     "@types/prismjs": "1.9.0",
     "@types/sjcl": "^1.0.28",
     "angular-autofocus-fix": "^0.1.0",
