--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ayo-principal",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "node patch.js",
     "ng": "ng",
     "start": "ng serve",
     "test": "ng test",
