--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build_app_for_dev_DXTR:
   before_script:
     - npm ci
   script:
-    - node --max-old-space-size=4096 ./node_modules/@angular/cli/bin/ng build
+    - node --max-old-space-size=4096 ./node_modules/@angular/cli/bin/ng build --aot=true --buildOptimizer=true --optimization=true --outputHashing=all --sourceMap=false --extractCss=true --namedChunks=false --extractLicenses=true --vendorChunk=false
   artifacts:
     paths:
       - dist/
