--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2",
+    "typescript": "2.9.2",
     "webpack-bundle-analyzer": "2.11.1"
   }
 }
