--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build_app_for_DEV_HMS:
     - DEVHMS
 
 deploy_to_DEV_HMS:
-  image: python:latest
+  image: alpine
   stage: deploy:toDEV-HMS
   dependencies:
     - build_app_for_DEV_HMS  
@@ -29,6 +29,7 @@ deploy_to_DEV_HMS:
     - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > /root/.ssh/config
     - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_DEV
     - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_DEV
+    - apk add --no-cache python py-pip
     - pip install awscli
     - aws s3 sync s3://dev-ayo-hms "$USER"@"$TARGET_SERVER":/var/www/backup-dev-ayo-hms/ --delete
     - aws s3 sync dist/ayo-principal/ s3://dev-ayo-hms/ --delete
