--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ deploy_to_DEV_HMS:
     - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_DEV
     - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_DEV
     - pip install awscli
-    - aws s3 sync s3://dev-ayo-hms s3://src-assets-dev/backup-dev-ayo-hms --delete
+    - aws s3 sync s3://dev-ayo-hms/ s3://src-assets-dev/backup-dev-ayo-hms --delete
     - aws s3 sync dist/ayo-principal/ s3://dev-ayo-hms/ --delete
   only:
     - DEVHMS
@@ -88,7 +88,7 @@ deploy_to_QA_HMS:
     - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_QA
     - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_QA
     - pip install awscli
-    - aws s3 sync s3://qa-ayo-hms s3://src-assets-qa/backup-qa-ayo-hms --delete
+    - aws s3 sync s3://qa-ayo-hms/ s3://src-assets-qa/backup-qa-ayo-hms --delete
     - aws s3 sync dist/ayo-principal/ s3://qa-ayo-hms/ --delete
   only:
     - QA-HMS
@@ -115,7 +115,7 @@ deploy_to_PROD:
     - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_QA
     - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_QA
     - pip install awscli
-    - aws s3 sync s3://qa-ayo-hms/_Deployment_PRD s3://src-assets-qa/backup-prod-ayo-hms --delete
+    - aws s3 sync s3://qa-ayo-hms/_Deployment_PRD/ s3://src-assets-qa/backup-prod-ayo-hms --delete
     - aws s3 sync dist/ayo-principal/ s3://qa-ayo-hms/_Deployment_PRD/ --delete
   only:
     - PROD
