--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,6 +103,7 @@ build_app_for_PROD:
   artifacts:
     paths:
       - dist/
+      - backup-principal-prod/
   only:
     - PROD
     
@@ -115,7 +116,8 @@ deploy_to_PROD:
     - export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_QA
     - export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_QA
     - pip install awscli
-    - aws s3 sync s3://qa-ayo-hms/_Deployment_PRD/ s3://src-assets-qa/backup-prod-ayo-hms --delete
+    - aws s3 sync s3://qa-ayo-hms/_Deployment_PRD/ backup-principal-prod --delete
+    - aws s3 sync backup-principal-prod/ s3://src-assets-qa/backup-prod-ayo-hms --delete
     - aws s3 sync dist/ayo-principal/ s3://qa-ayo-hms/_Deployment_PRD/ --delete
   only:
     - PROD
