feat: CDE-2644 Cookies Policy

--- a/angular.json
+++ b/angular.json
@@ -98,7 +98,7 @@
                 },
                 {
                   "replace": "src/public/index.html",
-                  "with": "src/public/index.prod.html"
+                  "with": "src/public/index.qa.html"
                 }
               ],
               "styles": [
