--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "ngx-color-picker": "6.0.0",
     "ngx-cookie-service": "1.0.10",
     "ngx-daterangepicker-material": "^1.2.7",
+    "ngx-drag-drop": "^2.0.0",
     "ngx-ellipsis": "^2.3.1",
     "ngx-lightbox": "^1.2.0",
     "ngx-mask": "^8.1.7",
