--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
     "lib": [
       "es2017",
       "dom"
-    ]
-  }
+    ],
+    "module": "commonjs",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
+  },
 }
