--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@ngrx/router-store": "6.0.0-beta.1",
     "@ngrx/store": "6.0.0-beta.1",
     "@ngrx/store-devtools": "6.0.0-beta.1",
-    "@ngx-translate/core": "10.0.1",
+    "@ngx-translate/core": "10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "@swimlane/ngx-charts": "8.1.0",
     "@swimlane/ngx-datatable": "16.1.1",
     "@swimlane/ngx-dnd": "4.0.0",
