--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "crypto-js": "^3.1.9-1",
     "d3": "5.2.0",
     "dexie": "^2.0.4",
+    "dragula": "^3.7.3",
     "firebase": "^6.3.1",
     "hammerjs": "2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
