--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # must be unique in a given SonarQube instance
 #rename sonar.projectKey base on service name
-sonar.projectKey=QA-PRINCIPAL  #QA-servicename
+sonar.projectKey=QA-PRINCIPAL
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectVersion=1.0
 sonar.login=10ee3f2a12a2fc4f9a5f879cdb4fbcd0913782fb
